--- a/ImportData_3rd.Rmd
+++ b/ImportData_3rd.Rmd
@@ -271,6 +271,23 @@ dat2b
 dat3
 ```
 
+#### 열구분문자 쉼표와 따옴표
+
+문자 쉼표가 값에 포함되어 있는 경우, 열구분문자 쉼표가 구분하기 위해 열의 시작과 끝을 따옴표를 사용했다. 열구분문자와 열의 시작과 끝을 나타내는 문자는 사용자의 편의에 따라 다른 문자로 설정이 가능하다. 하지만 현재 가장 많이 사용되는 문자는 쉼표와 따옴표이다.
+
+따옴표가 필요한 것은 값에 문자 쉼표가 포함되어 있는 경우이다. 만약 값에 문자 쉼표가 포함되어 있지 않다면 따옴표로 시작하지 않아도 된다.
+
+문제는 문자 따옴표가 값에 포함되어 있는 경우이다. 문자 쉼표는 없지만, 문자 따옴표가 값에 포함되어 있는 경우에는 열을 시작하고 끝내는 문자 따옴표를 쓰지 않아도 될까? 다음의 예를 보자.
+
+```
+I am ok.,You are fine.,"Thank you, sir."
+"A,B","A,B"
+```
+
+위의 텍스트는 열의 갯수가 3인 데이터를 나타낸다. 첫 행의 두 값(첫 번째 열과 두 번째 열)은 쉼표를 포함하지 않기 때문에 열의 시작과 끝을 나타내기 위해 따옴표가 필요하지 않다. 세번째 값은 쉼표를 포함하기 때문에 두 따옴표로 값을 감싸 안았다. 두 번째 행을 보자. 만약 첫 번째 값이 따옴표와 대문자 A라면, 쉼표가 포함되어 있지 않기 때문에 따옴표로 감싸 안지 않았다. 두 번째 값은 대문자 B와 따옴표로 구성된 문자열이며, 이 역시 쉼표를 포함하지 않기 때문에 따옴표로 감싸지 않았다. 세 번째 값은 대문자 A, 쉼표, 대문자 B로 이루어진 문자열이며 이 값은 쉼표를 포함하기 때문에 따옴표로 감싸 안았다. 하지만 이 행은 같은 이유로 `A,B`, `"A`, `B"`로 해석될 수도 있다. 다시 말해 쉼표가 포함되지 않은 값에도 문자 따옴표가 포함되어 있다면 그 값을 다음과 같이 따옴표로 감싸 안아야 이런 모호함을 방지할 수 있다.[^freadquote]
+
+[^freadquote]: 데이터테이블의 `fwrite()`와 `fread()`의 경우 따옴표가 포함된 값을 일관적으로 처리하지 못하는 듯 하다. `fwrite()`는 기본적으로 문자 따옴표를 두 개의 따옴표로 표기하지만, `fread()`는 두 개의 따옴표를 두 개의 따옴표로 인식한다. 아마도 열의 시작과 끝을 나타내는 따옴표는 줄의 첫 글자나 마지막 글자, 그리고 열구분문자의 앞 또는 뒤에서밖에 나타날 수 없기 때문에, 그냥 그대로 써도 혼동의 여지가 없는 경우도 많기 때문일 것이다. 이 경우에는 따옴표가 씌인 경우 열구분문자는 `,`가 아니라 `",`라고 할 수 있다. 물론 `",`가 값에 포함되는 경우가 매우 드물지만(영어권에서 쉼표와 따옴표가 함께 등장할 경우 `,"`로 쓴다.), 실제로 그런 일이 벌어진다면 데이터를 읽을 때 문제가 발생할 수 있다. (`fwrite()` 함수는 좀 더 복잡한 방식으로 열을 구분하기 때문에 그 결과가 어떻게 될지를 쉽게 예상하기는 어렵다.) 그리고 문자 따옴표를 표기/인식하는 방법의 차이에 따라 `fwrite()`로 생성된 텍스트 화일을 `fread()`로 정확히 읽을 수 없는 상황이다. 이에 대해 여러 차례 깃헙에서 issue가 제기되었으나 아직 해결되지 않은 상태이다. 현재로써는 `,"`가 값에 포함되지 않은 경우에는 `fwrite()`의 결과 화일을 `fread()`로 읽기 위해서는 `gsub('""', '"', txt)` 등을 통해 텍스트에 포함된 모든 이중따옴표(`""`)를 하나의 따옴표로 교체한 후 화일을 읽어야 한다. 
+
 ### 텍스트 데이터 화일을 불러읽을 때 고려해야 할 사항
 
 그 밖에도 테이블 형태의 데이터를 화일로 저장하기 위해 결정해야 할 사항이 많다. 다음은 `read.table` 함수를 통해 테이블 형태의 텍스트 데이터 화일을 읽어올 때 고려할 점들을 보여준다.
@@ -338,22 +355,7 @@ data.table::fread(file= , sep= , header= )
 
 #### 보이는 것이 모두가 아니다.
 
-## 열구분문자 쉼표와 따옴표
 
-문자 쉼표가 값에 포함되어 있는 경우, 열구분문자 쉼표가 구분하기 위해 열의 시작과 끝을 따옴표를 사용했다. 열구분문자와 열의 시작과 끝을 나타내는 문자는 사용자의 편의에 따라 다른 문자로 설정이 가능하다. 하지만 현재 가장 많이 사용되는 문자는 쉼표와 따옴표이다.
-
-따옴표가 필요한 것은 값에 문자 쉼표가 포함되어 있는 경우이다. 만약 값에 문자 쉼표가 포함되어 있지 않다면 따옴표로 시작하지 않아도 된다.
-
-문제는 문자 따옴표가 값에 포함되어 있는 경우이다. 문자 쉼표는 없지만, 문자 따옴표가 값에 포함되어 있는 경우에는 열을 시작하고 끝내는 문자 따옴표를 쓰지 않아도 될까? 다음의 예를 보자.
-
-```
-I am ok.,You are fine.,"Thank you, sir."
-"A,B","A,B"
-```
-
-위의 텍스트는 열의 갯수가 3인 데이터를 나타낸다. 첫 행의 두 값(첫 번째 열과 두 번째 열)은 쉼표를 포함하지 않기 때문에 열의 시작과 끝을 나타내기 위해 따옴표가 필요하지 않다. 세번째 값은 쉼표를 포함하기 때문에 두 따옴표로 값을 감싸 안았다. 두 번째 행을 보자. 만약 첫 번째 값이 따옴표와 대문자 A라면, 쉼표가 포함되어 있지 않기 때문에 따옴표로 감싸 안지 않았다. 두 번째 값은 대문자 B와 따옴표로 구성된 문자열이며, 이 역시 쉼표를 포함하지 않기 때문에 따옴표로 감싸지 않았다. 세 번째 값은 대문자 A, 쉼표, 대문자 B로 이루어진 문자열이며 이 값은 쉼표를 포함하기 때문에 따옴표로 감싸 안았다. 하지만 이 행은 같은 이유로 `A,B`, `"A`, `B"`로 해석될 수도 있다. 다시 말해 쉼표가 포함되지 않은 값에도 문자 따옴표가 포함되어 있다면 그 값을 다음과 같이 따옴표로 감싸 안아야 이런 모호함을 방지할 수 있다.[^freadquote]
-
-[^freadquote]: 데이터테이블의 `fwrite()`와 `fread()`의 경우 따옴표가 포함된 값을 일관적으로 처리하지 못하는 듯 하다. `fwrite()`는 기본적으로 문자 따옴표를 두 개의 따옴표로 표기하지만, `fread()`는 두 개의 따옴표를 두 개의 따옴표로 인식한다. 아마도 열의 시작과 끝을 나타내는 따옴표는 줄의 첫 글자나 마지막 글자, 그리고 열구분문자의 앞 또는 뒤에서밖에 나타날 수 없기 때문에, 그냥 그대로 써도 혼동의 여지가 없는 경우도 많기 때문일 것이다. 이 경우에는 따옴표가 씌인 경우 열구분문자는 `,`가 아니라 `",`라고 할 수 있다. 물론 `",`가 값에 포함되는 경우가 매우 드물지만(영어권에서 쉼표와 따옴표가 함께 등장할 경우 `,"`로 쓴다.), 실제로 그런 일이 벌어진다면 데이터를 읽을 때 문제가 발생할 수 있다. (`fwrite()` 함수는 좀 더 복잡한 방식으로 열을 구분하기 때문에 그 결과가 어떻게 될지를 쉽게 예상하기는 어렵다.) 그리고 문자 따옴표를 표기/인식하는 방법의 차이에 따라 `fwrite()`로 생성된 텍스트 화일을 `fread()`로 정확히 읽을 수 없는 상황이다. 이에 대해 여러 차례 깃헙에서 issue가 제기되었으나 아직 해결되지 않은 상태이다. 현재로써는 `,"`가 값에 포함되지 않은 경우에는 `fwrite()`의 결과 화일을 `fread()`로 읽기 위해서는 `gsub('""', '"', txt)` 등을 통해 텍스트에 포함된 모든 이중따옴표(`""`)를 하나의 따옴표로 교체한 후 화일을 읽어야 한다. 
 
 ## 바이너리 화일 읽기{#binary}
 
