--- a/ImportData_3rd.Rmd
+++ b/ImportData_3rd.Rmd
@@ -378,6 +378,10 @@ mtcars3 <- read_feather('mtcars.feather')
 all.equal(as_tibble(mtcars), mtcars3)
 ```
 
+SSD와 멀티코어 cpu를 사용할 수 있다면 `fst` 패키지를 사용할 수 있다. [fst 패키지 소개 사이트](https://www.fstpackage.org)를 가보면 여러 패키지의 속도를 비교한 결과를 확인할 수 있다. 맥에서는 openMP라는 라이브러리를 설치해야 `fst`의 성능을 최대로 활용할 수 있다.[^macopenmp]
+
+[^macopenmp]: 맥에서 OpenMP는 `brew install libomp`(또는 `-arch -arm64 brew install <package>`)를 사용하여 설치한다. 
+
 ## 압축 화일에서 읽어오기{#importzip}
 
 앞에서 얘기했듯이 텍스트 데이터 화일은 바이너리 데이터 화일에 비해 용량이 크다. 데이터 화일이 10M 바이트 이하라면 상관이 없겠지만, 그 이상이거나, 화일이 여럿이라면 텍스트 화일로 저장하는 것이 부담스러울 수 있다. 만약 데이터 화일을 압축해서 보관한다면 디스크 용량을 절약할 수 있다. 
