--- a/ImportData_3rd.Rmd
+++ b/ImportData_3rd.Rmd
@@ -380,7 +380,7 @@ all.equal(as_tibble(mtcars), mtcars3)
 
 SSD와 멀티코어 cpu를 사용할 수 있다면 `fst` 패키지를 사용할 수 있다. [fst 패키지 소개 사이트](https://www.fstpackage.org)를 가보면 여러 패키지의 속도를 비교한 결과를 확인할 수 있다. 맥에서는 openMP라는 라이브러리를 설치해야 `fst`의 성능을 최대로 활용할 수 있다.[^macopenmp]
 
-[^macopenmp]: 맥에서 OpenMP는 `brew install libomp`(또는 `-arch -arm64 brew install <package>`)를 사용하여 설치한다. 
+[^macopenmp]: 맥에서 OpenMP는 `brew install libomp`(또는 `arch -arm64 brew install <package>`)를 사용하여 설치한다. 
 
 ## 압축 화일에서 읽어오기{#importzip}
 
